--- a/index.html
+++ b/index.html
@@ -1,11 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
+      </head>
+      <body>
+        <section class="contact-section">
+          <div class="section-header">
+            <h2>Contact Us</h2>
+            <p>
+              Have questions about your next adventure? Reach out to our travel
+              experts who are ready to help you plan your dream vacation.
+            </p>
+          </div>
+
+          <div class="contact-container">
+            <div class="contact-info">
+              <div class="info-box">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="info-text">
+                  <h3>Our Office</h3>
+                  <p>New Baneshwor, Kathmandu</p>
+                </div>
+              </div>
+
+              <div class="info-box">
+                <i class="fas fa-phone-alt"></i>
+                <div class="info-text">
+                  <h3>Call Us</h3>
+                  <p><a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                  <p><a href="tel:+1987654321">+1 (987) 654-321</a></p>
+                </div>
+              </div>
+
+              <div class="info-box">
+                <i class="fas fa-envelope"></i>
+                <div class="info-text">
+                  <h3>Email Us</h3>
+                  <p>
+                    <a href="mailto:info@travelparadise.com"
+                      >info@travelparadise.com</a
+                    >
+                  </p>
+                  <p>
+                    <a href="mailto:support@travelparadise.com"
+                      >support@travelparadise.com</a
+                    >
+                  </p>
+                </div>
+              </div>
+
+              <div class="info-box">
+                <i class="fas fa-clock"></i>
+                <div class="info-text">
+                  <h3>Working Hours</h3>
+                  <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
+                  <p>Saturday: 10:00 AM - 4:00 PM</p>
+                </div>
+              </div>
+
+              <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+              </div>
+            </div>
+
+            <div class="contact-form">
+              <form>
+                <div class="form-group">
+                  <label for="name">Your Name</label>
+                  <input
+                    type="text"
+                    id="name"
+                    class="form-control"
+                    placeholder="Enter your name"
+                    required
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="email">Email Address</label>
+                  <input
+                    type="email"
+                    id="email"
+                    class="form-control"
+                    placeholder="Enter your email"
+                    required
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="phone">Phone Number</label>
+                  <input
+                    type="tel"
+                    id="phone"
+                    class="form-control"
+                    placeholder="Enter your phone number"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="subject">Subject</label>
+                  <input
+                    type="text"
+                    id="subject"
+                    class="form-control"
+                    placeholder="What's this about?"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label for="message">Your Message</label>
+                  <textarea
+                    id="message"
+                    class="form-control"
+                    placeholder="Tell us about your travel plans or questions"
+                  ></textarea>
+                </div>
+
+                <button type="submit" class="submit-btn">Send Message</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="map-container">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.383062830366!2d85.33172231506206!3d27.70401068279341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb199f75f08da5%3A0x641a4463533be28c!2sNew%20Baneshwor%2C%20Kathmandu%2044600%2C%20Nepal!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
+        </section>
+      </body>
+    </html>
+  </body>
 </html>
