Save local changes before pull

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                   <p>New Baneshwor, Kathmandu</p>
                 </div>
               </div>
-<!--   hhhhh  -->
-   
+              <!--   hhhhh  -->
+
               <div class="info-box">
                 <i class="fas fa-phone-alt"></i>
                 <div class="info-text">
@@ -71,11 +71,30 @@
               </div>
 
               <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"
+                  ><i class="fab fa-facebook-f"></i>
+                  <img
+                    src="https://imgs.search.brave.com/aoCIZ5b9mxClIEIDcetWUaJBre1HrrkQFFCipoCrZrA/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzRlLzYy/LzVjLzRlNjI1YzBh/NDUwZGM4NmQ2ODVh/NmUwZWU4NmUzZDZk/LmpwZw"
+                    alt="fb logo"
+                /></a>
+                <a href="#"
+                  ><i class="fab fa-twitter"></i
+                  ><img
+                    src="https://imgs.search.brave.com/I7FO9cBefdPYAgHwaBFZDTLeNKWkIm-Mxe9_Ep8Rswc/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jZG4t/aWNvbnMtcG5nLmZy/ZWVwaWsuY29tLzI1/Ni8xNTA2MC8xNTA2/MDAwOS5wbmc_c2Vt/dD1haXNfd2hpdGVf/bGFiZWw"
+                    alt="twitter logo"
+                /></a>
+                <a href="#"
+                  ><i class="fab fa-instagram"></i
+                  ><img
+                    src="https://imgs.search.brave.com/raC1yydzbJP11yF4eQIP4JmJPnh78fWm9_ynnoqqDSM/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jZG40/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvc29jaWFsLW1l/c3NhZ2luZy11aS1j/b2xvci1zaGFwZXMt/Mi1mcmVlLzEyOC9z/b2NpYWwtaW5zdGFn/cmFtLW5ldy1zcXVh/cmUyLTUxMi5wbmc"
+                    alt="insta logo"
+                /></a>
+                <a href="#"
+                  ><i class="fab fa-linkedin-in"></i
+                  ><img
+                    src="https://imgs.search.brave.com/s4XvVKnUxWbX-_i0PDJGyc6CQQtmZMzV2Dat6Ab593k/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jZG4t/aWNvbnMtcG5nLmZy/ZWVwaWsuY29tLzI1/Ni8zNDg4LzM0ODgz/MTEucG5nP3NlbXQ9/YWlzX3doaXRlX2xh/YmVs"
+                    alt="linkedin"
+                /></a>
               </div>
             </div>
 
@@ -138,13 +157,14 @@
           </div>
 
           <div class="map-container">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.383062830366!2d85.33172231506206!3d27.70401068279341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb199f75f08da5%3A0x641a4463533be28c!2sNew%20Baneshwor%2C%20Kathmandu%2044600%2C%20Nepal!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-</div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.383062830366!2d85.33172231506206!3d27.70401068279341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb199f75f08da5%3A0x641a4463533be28c!2sNew%20Baneshwor%2C%20Kathmandu%2044600%2C%20Nepal!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
+          </div>
         </section>
       </body>
     </html>
