--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     placeholder="What's this about?"
                   />
                 </div>
-
+<!--  nisan -->
                 <div class="form-group">
                   <label for="message">Your Message</label>
                   <textarea
