--- a/home/home.html
+++ b/home/home.html
@@ -585,8 +585,8 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#destinations">Destinations</a></li>
             <li><a href="#packages">Packages</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../roshan.html">About Us</a></li>
+            <li><a href="../index.html">Contact</a></li>
           </ul>
         </nav>
       </div>
